[metadata]
name = pgrep
version = 2018.11.20
url = https://github.com/looking-for-a-job/pgrep.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = pgrep

[options]
install_requires = 
	public
	setuptools
packages = 
	pgrep
